doc: atualiza documentação dos endpoint de produtos
